# pythonmcp

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
templates/: files.html  index.html  mcp.html  monitor.html  nav.html
